Started 1d. Realized that align-items: center for the logo flexbox fixed the logo growing to fill the extra space. Going back to try to implement that in 1c.

--- a/opdracht-1/styles.css
+++ b/opdracht-1/styles.css
@@ -53,26 +53,54 @@
     justify-content: flex-end;
     list-style-type: none;
     flex-grow: 98;
- }
+}
 
 
 
 
 /* Opdracht 1d */
-/*
-.navbar-four {
-    display: flex;
+.navbar-four ul {
+    list-style-type: none;
 }
 
+/*----- Navbar flexbox -----*/
+.navbar-four {
+    display: flex;
+    justify-content: space-between;
+}
+
+      /*----- Logo flexbox -----*/
+/* The image takes up more space than previous iterations because
+ the login buttons take up more vertical space, so the image grows to fill it.
+ */
 .navbar-four .logo {
     display: flex;
-    justify-content: flex-start;
-    flex-grow: 2;
- }
 
-.navbar-four ul {
+    align-items: center;
+    background-color: green;
+}
+
+            /*----- Logo -----*/
+.navbar-four .logo img {
+
+}
+
+            /*----- Text flexbox -----*/
+.navbar-four .logo p {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+      /*----- Menu flexbox -----*/
+.navbar-four ul.menu {
+    display: flex;
+    justify-content: center;
+}
+
+      /*----- Login flexbox -----*/
+.navbar-four ul.login {
     display: flex;
     justify-content: flex-end;
-    list-style-type: none;
-    flex-grow: 1;
- }*/
+}
